// Copyright (c) 2026 dilocash
// Use of this source code is governed by an MIT-style
// license that can be found in the LICENSE file.

syntax = "proto3";

package dilocash.v1;

option go_package = "github.com/dilocash/dilocash-oss/apps/api/internal/generated/transport/dilocash/v1";

import "google/protobuf/timestamp.proto";

message CommandsList {
  repeated Command created = 1;
  repeated Command updated = 2;
  repeated string deleted = 3;
}

// represents the command of a financial transaction
message Command {
  string id = 1;              // UUID generated in the client (localdb primary key)
  // critical fields for offline-first synchronization
  CommandStatus command_status = 2;
  bool deleted = 3;           // Flag for "Soft Deletes" (localdb requires it)
  google.protobuf.Timestamp created_at = 4;       // Timestamp in milliseconds (our Checkpoint)
  google.protobuf.Timestamp updated_at = 5;       // Timestamp in milliseconds (our Checkpoint)
}

enum CommandStatus {
  COMMAND_STATUS_UNSPECIFIED = 0;
  COMMAND_STATUS_PENDING = 1;
  COMMAND_STATUS_PROCESSING = 2;
  COMMAND_STATUS_FAILED = 3;
  COMMAND_STATUS_SYNCED = 4;
}